create singup UI

--- a/clinet/src/index.css
+++ b/clinet/src/index.css
@@ -5,3 +5,6 @@
 .txt-media{
     @apply text-sm sm:text-xl
 }
+.main-gradient{
+    @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500
+}
