--- a/clinet/src/index.css
+++ b/clinet/src/index.css
@@ -8,3 +8,7 @@
 .main-gradient{
     @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500
 }
+
+.icon-effect{
+    @apply hover:bg-red-500
+}
