--- a/clinet/src/index.css
+++ b/clinet/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body{
+    height: 100vh;
+}
+/* usefull classes */
 .txt-media{
     @apply text-sm sm:text-xl
 }
