--- a/clinet/src/index.css
+++ b/clinet/src/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
+html, body{
+  width:100%;
+  overflow-x:hidden;
+  }
 body{
     height: 100vh;
+    overflow-x: hidden;
 }
 /* usefull classes */
 .txt-media{
